# Cura

./: AUTO_UPDATE.md  CODE_SIGNING.md  DEVELOPMENT.md  DISTRIBUTION.md  INTEGRATION_VERIFICATION.md  PERFORMANCE_OPTIMIZATIONS.md  QUICK_RELEASE_GUIDE.md  README.md  RELEASE_NOTES_TEMPLATE.md  TASK_16_COMPLETION_SUMMARY.md  UI_POLISH.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vitest.setup.ts
.github/workflows/: release.yml
docs/: FFMPEG_INSTALLATION.md  RELEASE_ARTIFACTS.md  RELEASE_PROCESS.md  TASK_18.4_SUMMARY.md  TASK_23.2_SUMMARY.md  TASK_26.1_SUMMARY.md  TASK_26.2_SUMMARY.md  TASK_27.2_SUMMARY.md  TASK_30.1_SUMMARY.md  TASK_30.2_SUMMARY.md  TASK_31.1_SUMMARY.md  TASK_31.2_SUMMARY.md  TASK_32_FINAL_CHECKPOINT_SUMMARY.md  VIDEO_FEATURES.md  VIDEO_PERFORMANCE_TESTING.md  VIDEO_THUMBNAIL_OPTIMIZATION.md
scripts/: build-release.ps1  build-release.sh  prepare-release.ps1  prepare-release.sh  verify-checksum.ps1  verify-checksum.sh
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/benches/: video_performance.rs
src-tauri/capabilities/: default.json
src-tauri/proptest-regressions/: auth.txt  database.txt  thumbnail.txt
src-tauri/src/: auth.rs  database.rs  ffmpeg.rs  lib.rs  logging.rs  metadata.rs  migrations.rs  performance.rs  scanner.rs  settings.rs  sync.rs  thumbnail.rs  updater.rs
src-tauri/tests/: video_e2e_tests.rs  video_performance_tests.rs
src/__tests__/: integration.test.ts  setup.test.ts  video-e2e.test.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AIProcessingManager.tsx  (+16 more)
(+32 files in other folders)
