[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Image processing
image = "0.25"
kamadak-exif = "0.5"
rayon = "1.10"
walkdir = "2.5"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"

# OAuth and cloud sync
oauth2 = "4.4"
keyring = "3.6"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
tokio = { version = "1.42", features = ["full"] }
url = "2.5"
open = "5.3"
urlencoding = "2.1"

[dev-dependencies]
proptest = "1.5"
tempfile = "3.13"
uuid = { version = "1.11", features = ["v4"] }
